--- a/NewMVCMusicStore.Tests/packages.config
+++ b/NewMVCMusicStore.Tests/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="Wrox.ProMvc5.Views.AlbumList" version="1.0.0.0" targetFramework="net452" />
 </packages>
