--- a/NewMVCMusicStore.Tests/packages.config
+++ b/NewMVCMusicStore.Tests/packages.config
@@ -6,4 +6,6 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
   <package id="Wrox.ProMvc5.Views.AlbumList" version="1.0.0.0" targetFramework="net452" />
+  <package id="Wrox.ProMvc5.Views.SpecifyingViews" version="1.0.0" targetFramework="net452" />
+  <package id="Wrox.ProMvc5.Views.ViewModel" version="1.0.0" targetFramework="net452" />
 </packages>
